# pavpy

./: .gitignore  README.md  pyproject.toml  stagger_4term_coeffs.json
docs/: 1-oblate-stars.ipynb
src/pavpy/: __init__.py  models.py  pavol1l2.py  tel_locations.txt  utils.py
