[tool.poetry]
name = "pavpy"
version = "0.1.2"
description = "A package for analysing PAVO observations in Python"
authors = ["Tim White <tim.white@sydney.edu.au>"]
license = "GPLv3"
readme = "README.md"
include = ["src/pavpy/stagger_4term_coeffs.json","src/pavpy/tel_locations.txt","src/papvy/Tycho_BV_Bessel2000.dat"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
astropy = "5.1.1"
numpy = "1.23.3"
scipy = "1.9.1"
pandas = "1.5.0"
astroquery = "0.4.7.dev8076"
dustmaps = "1.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
